# aoc2021

./: .travis.yml  Cargo.toml  Makefile  README.html  README.md  gen_readme.py  parse_bench.py
benches/: benches.rs
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5-.rs  day5.rs  day6.rs  day7.rs  day8-.rs  day8.rs  day9.rs  lib.rs  main.rs  read_input.rs
