[package]
name = "aoc2021"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1.5.4"
rust-crypto = "0.2.36"
criterion = { version = "0.3", features = ["html_reports"] }
itertools = "0.10.1"
hashbrown = "0.11.2"
serde_json = "1.0.68"
phf = { version = "0.10.0", features = ["macros"] }
cached = "0.26.2"
lazy_static = "1.4.0"

[[bench]]
name = "benches"
harness = false

[lib]
bench = false
